# llm-in-environmental-research

./: README.md  analysis_lump.ipynb  lump.xlsx  pyproject.toml
data/: abstracts-500.xlsx
models/: chatgpt-4o.ipynb  claude-3-5.ipynb  deepseek.ipynb  gemini.ipynb  mistral.ipynb  v1_prompt_with_examples.txt  v1_prompt_without_examples.txt
results/chatgpt_2025/: correct-abstracts-500__v1_balanced-prompt-without-examples__output.xlsx  correct-abstracts-500__v1_balanced-prompt-without-examples__summary.txt  correct-abstracts-500__v1_balanced-prompt__output.xlsx  correct-abstracts-500__v1_balanced-prompt__summary.txt
results/claude_2025/: 100625-correct-abstracts-500__v1_balanced-prompt-without-examples__output.xlsx  correct-abstracts-500__v1_balanced-prompt-without-examples__summary.txt  correct-abstracts-500__v1_balanced-prompt__output.xlsx  correct-abstracts-500__v1_balanced-prompt__summary.txt
results/deepseek_2025/: correct-abstracts-500__v1_balanced-prompt-without-examples__output.xlsx  correct-abstracts-500__v1_balanced-prompt-without-examples__summary.txt  correct-abstracts-500__v1_balanced-prompt__output.xlsx  correct-abstracts-500__v1_balanced-prompt__summary.txt
results/gemini_2025/: correct-abstracts-500__v1_balanced-prompt-without-examples__output.xlsx  correct-abstracts-500__v1_balanced-prompt-without-examples__summary.txt  correct-abstracts-500__v1_balanced-prompt__output.xlsx  correct-abstracts-500__v1_balanced-prompt__summary.txt
results/mistral_2025/: correct-abstracts-500__v1_balanced-prompt-without-examples__output.xlsx  (+3 more)
