[tool.poetry]
name = "ai-literature-review"
version = "0.1.0"
description = ""
authors = ["Andrea Merlina <ame@niva.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
openai = "^1.43.0"
openpyxl = "^3.1.5"
vertexai = "^1.65.0"
anthropic = "^0.34.2"
mistralai = "^1.0.3"
pymupdf = "^1.24.10"
tiktoken = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
